--- a/LEVEL-UP/inicio_Secion.html
+++ b/LEVEL-UP/inicio_Secion.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="navbar">
+    <div class="logo">
+        <img src="IMG/logo1.png" alt="Logo de la Empresa">
+    </div>
+    <a href="javascript:history.back()" class="volver">Volver</a>
+</header>
 </body>
 </html>
