--- a/LEVEL-UP/registro.html
+++ b/LEVEL-UP/registro.html
@@ -3,20 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formulario de Registro</title>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="CSS/login.css">
 </head>
-<body>
-    <div class="registro">
-        <h2>Registrarse</h2>
-        <input type="text" id="nombre" placeholder="ingresa tu nombre"><br>
-        <br><input type="text" id="apellido" placeholder="ingresa tu apellido"><br>
-        <br><input type="number" id="edad" placeholder="ingresa tu fecha de nacimiento"><br>
-        <br><input type="email" id="correo" placeholder="ingresa tu correo"><br>
-        <br><input type="password" id="contraseña1" placeholder="ingresa tu contraseña"><br>
-        <br><input type="password" id="contraseña2" placeholder="ingresa nuevamente tu contraseña"><br>
-
-        <button onclick="guardar()">Guardar</button>
-        <script src="JS/registro.js"></script> </body>
+<header class="navbar">
+    <div class="logo">
+        <img src="IMG/Adobe Express - file.png" alt="pagina inicial">
     </div>
+    <a href="javascript:history.back()" class="volver" alt="">Volver</a>
+</header>
+<body>
+    <div class="contenedor-principal">
+        <div class="contenedor">
+            <h2>Registro</h2>
+            <form>
+                <input type="text" id="nombre" placeholder="Ingresa tu nombre">
+                <input type="text" id="apellido" placeholder="Ingresa tu apellido">
+                <input type="number" id="edad" placeholder="Ingresa tu fecha de nacimiento">
+                <input type="email" id="correo" placeholder="Ingresa tu correo">
+                <input type="password" id="contraseña1" placeholder="Ingresa tu contraseña">
+                <input type="password" id="contraseña2" placeholder="Ingresa nuevamente tu contraseña">
+                <button type="submit" onclick="guardar()">Guardar</button>
+            </form>
+        </div>
+    </div>
+    <script src="JS/registro.js"></script>
 </body>
 </html>
