--- a/LEVEL-UP/login.html
+++ b/LEVEL-UP/login.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
-<html lang="es">
+<<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Inicio de Sesión</title>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="CSS/login.css">
 </head>
 <body>
-
+<header class="navbar">
+    <div class="logo">
+        <img src="IMG/logo1.png" alt="Logo de la Empresa">
     </div>
+    <a href="javascript:history.back()" class="volver">Volver</a>
+</header>
+    <div class="contenedor-principal">
+        <div class="contenedor">
+            <h1>Inicio de Sesión</h1>
+            <form>
+                <input type="email" id="correo" placeholder="Ingresa tu correo">
+                <input type="password" id="contraseña1" placeholder="Ingresa tu contraseña">
+                <button type="submit" onclick="validar()">Validar</button>
+            </form>
+        </div>
+    </div>
+    <script src="JS/login.js"></script>
 </body>
 </html>
