--- a/LEVEL-UP/registro.html
+++ b/LEVEL-UP/registro.html
@@ -13,7 +13,7 @@
 </head>
 <header class="navbar">
     <div class="logo">
-        <img src="IMG/Adobe Express - file.png" alt="pagina inicial">
+        <a href="pagina.html"><img src="IMG/Adobe Express - file.png" alt="pagina inicial" ></a>
     </div>
     <a href="javascript:history.back()" class="volver" alt="">Volver</a>
 </header>
