--- a/LEVEL-UP/detalle_producto.html
+++ b/LEVEL-UP/detalle_producto.html
@@ -14,5 +14,9 @@
         </table>
     </div>
 
+
+    <script>
+        alert(sessionStorage.getItem("id_producto"))
+    </script>
 </body>
 </html>
