--- a/LEVEL-UP/registro.html
+++ b/LEVEL-UP/registro.html
@@ -11,13 +11,24 @@
     
     <link rel="stylesheet" href="CSS/login.css">
 </head>
-<header class="navbar">
-    <div class="logo">
-        <a href="pagina.html"><img src="IMG/Adobe Express - file.png" alt="pagina inicial" ></a>
-    </div>
-    <a href="javascript:history.back()" class="volver" alt="">Volver</a>
-</header>
 <body>
+    <header class="navbar">
+        <div class="logo">
+            <img src="IMG/Adobe Express - file.png" alt="Logo de la Empresa" href="pagina.html">
+        </div>
+        <nav class="nav-links">
+            <a href="pagina.html">Home</a>
+            <span>|</span>
+            <a href="productos.html">Productos</a>
+            <span>|</span>
+            <a href="nosotros.html">Nosotros</a>
+            <span>|</span>
+            <a href="blog.html">Blogs</a>
+            <span>|</span>
+            <a href="contacto.html">Contacto</a>
+        </nav>
+    <a href="javascript:history.back()" class="volver">Volver</a>
+</header>
     <div class="contenedor-principal">
         <div class="contenedor">
             <h2>Registro</h2>
