--- a/LEVEL-UP/pagina.html
+++ b/LEVEL-UP/pagina.html
@@ -25,6 +25,10 @@
         </nav>
     <a href="javascript:history.back()" class="volver">Volver</a>
 </header>
+            <a href="login.html">Iniciar sesion</a>
+            <span>|</span>
+            <a href="registro.html">Registrarse</a>
+            <span>|</span>
     <h1>hola</h1>
 </body>
 </html>
