--- a/LEVEL-UP/registro.html
+++ b/LEVEL-UP/registro.html
@@ -33,12 +33,21 @@
         <div class="contenedor">
             <h2>Registro</h2>
             <form>
+                <label >NOMBRE</label>
                 <input type="text" id="nombre" placeholder="Ingresa tu nombre">
+                <label >APELLIDO</label>
                 <input type="text" id="apellido" placeholder="Ingresa tu apellido">
+                <label >EDAD</label>
                 <input type="number" id="edad" placeholder="Ingresa tu fecha de nacimiento">
+                <label >CORREO</label>
                 <input type="email" id="correo" placeholder="Ingresa tu correo">
+                <label >CONTRASEÑA</label>
                 <input type="password" id="contraseña1" placeholder="Ingresa tu contraseña">
+                <label >VERIFICAR CONTRASEÑA</label>
                 <input type="password" id="contraseña2" placeholder="Ingresa nuevamente tu contraseña">
+                <label >TELEFONO</label>
+                <input type="number" id="numero" placeholder="(opcional)Ingrese su numero de telefono">
+
                 <button type="submit" onclick="guardar()">Guardar</button>
             </form>
         </div>
