--- a/LEVEL-UP/detalle_producto.html
+++ b/LEVEL-UP/detalle_producto.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="CSS/productos.css">
 </head>
 <body>
     <div>
@@ -15,27 +16,21 @@
         </table>
     </div>
 
-    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" style = "width : 50%;">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="image/tecladoimagen2.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="image/tecladoimagen2.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="image/tecladoimagen2.jpg" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
+   <table>
+      <tr class = "im_selec_prod" >
+        <td  style = "height: 100px;"></td>>
+          <img src="image/tecladogamer1.webp" alt="" style = "width:234px;">
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          <img src="image/tecladogamer1.webp" alt="" class = "select_image">
+          <img src="image/tecladogamer1.webp" alt=""   class = "select_image">
+          <img src="image/tecladoimagen2.jpg" alt=""   class = "select_image">
+        </td>
+      </tr>
+   </table>
 
 
 
