--- a/LEVEL-UP/detalle_producto.html
+++ b/LEVEL-UP/detalle_producto.html
@@ -6,6 +6,15 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/productos.css">
+    <style>
+        span{
+            justify-content: space-between;
+            display: flex;
+            width: 100%;
+            display: flex;
+            border: 1px solid #ccc;
+        }
+    </style>
 </head>
 <body>
     <div>
@@ -16,31 +25,60 @@
         </table>
     </div>
 
-   <table>
-      <tr class = "im_selec_prod" >
-        <td  style = "height: 100px;"></td>>
-          <img src="image/tecladogamer1.webp" alt="" style = "width:234px;">
-        </td>
-      </tr>
+    <div class = "contenedor_info">
+        <div id="contenedor-imgs">
+            <table class = "imgs_producto">
+                <tr>
+                    <td>
+                    <img id = "im_selec_prod"  src="image/tecladogamer1.webp" alt="" style="background-color: black;">
+                    </td>
+                    
+                </tr>
 
-      <tr>
-        <td>
-          <img src="image/tecladogamer1.webp" alt="" class = "select_image">
-          <img src="image/tecladogamer1.webp" alt=""   class = "select_image">
-          <img src="image/tecladoimagen2.jpg" alt=""   class = "select_image">
-        </td>
-      </tr>
-   </table>
+                <tr>
+                    <td>
+                    <img src="image/tecladogamer1.webp" alt="" class = "select_image">
+                    <img src="image/tecladogamer1.webp" alt=""   class = "select_image">
+                    <img src="image/tecladoimagen2.jpg" alt=""   class = "select_image">
+                    </td>
+                </tr>
+            </table>
+        </div>
 
+        <div class = "info_producto">
+                <span><h3 class="detalle_1linea" id = "nombre_prod" style= "text-align: left;">Nombre_producto</h3> <h3 class="detalle_1linea" style = "text-align: right;">costo</h3> </span>
+                <h6 class="detalle_1linea">Categoria:</h6> <p class="detalle_1linea">categoria</p>
+                <hr>
+                <p></p>
+                <hr>
+                <span> <p class="detalle_1linea">Cantidad</p>  <input type="text"  class="detalle_1linea"></span>
+                <span style = "justify-content: center;"><button style = "width: 90%; height:40px; margin-top:60px;  "> agregar al carrito</button> </span>
+
+                <hr>
+        </div>
+   </div>
+
+   <hr>
+
+   <br> <br> 
+
+   <h6>Productos relacionados</h6>
+
+   <div class = "imgs-relaci">
+
+
+   </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
 
     <script src="JS/productos.js">
-        alert(sessionStorage.getItem("id_producto"))
+            alert("estoy det");
     </script>
 
-    <script src="JS/detalle_producto.js"></script>
+    <script src="JS/detalle_producto.js"> </script>
+
+    
 </body>
 </html>
