--- a/LEVEL-UP/contacto.html
+++ b/LEVEL-UP/contacto.html
@@ -44,9 +44,9 @@
                 
                 <label >ASUNTO</label>
                 <textarea id="contenido" rows="5"></textarea>
-                <button type="submit">enviar</button>
+                <button type="submit" onclick="guardar()">enviar</button>
         </div>
     </div>
-    <script src="JS/login.js"></script>
+    <script src="JS/contacto.js"></script>
 </body>
 </html>
