--- a/LEVEL-UP/productos_administrador.html
+++ b/LEVEL-UP/productos_administrador.html
@@ -48,7 +48,7 @@
     </table>
     
     <script src="JS/productos.js"></script>
-    <script src = "JS/productos_logica.js"  ></script>
+    <script src = "JS/administrador_producto.js"  ></script>
 
     
 
