--- a/LEVEL-UP/blog.html
+++ b/LEVEL-UP/blog.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Level-Up Gamer | Blogs</title>
-  <link rel="stylesheet" href="../css/estilo_lvlup.css">
+  <link rel="stylesheet" href="css/estilo_lvlup.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Orbitron:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -33,7 +33,7 @@
         <a href="blog1.html" class="btn-blog">Ver noticia</a>
       </div>
       <div class="blog-img">
-        <img src="../img/accesorios-gamer_1.webp" alt="Accesorios gamer" width="350">
+        <img src="img/accesorios-gamer_1.webp" alt="Accesorios gamer" width="350">
       </div>
     </section>
 
@@ -44,7 +44,7 @@
         <a href="blog2.html" class="btn-blog">Ver noticia</a>
       </div>
       <div class="blog-img">
-        <img src="../img/nintendo juegos.webp" alt="NSW2" width="350">
+        <img src="img/nintendo juegos.webp" alt="NSW2" width="350">
       </div>
     </section>
   </main>
