--- a/LEVEL-UP/blog2.html
+++ b/LEVEL-UP/blog2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog | Nintendo Switch 2</title>
-  <link rel="stylesheet" href="../css/estilo_lvlup.css">
+  <link rel="stylesheet" href="css/estilo_lvlup.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Orbitron:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -20,7 +20,7 @@
 
   <main class="blog-detail">
     <h1>Juegos para Switch 2 que saldrán en lo que queda de 2025</h1>
-    <img src="../img/nintendo juegos.webp" alt="NSW2 2025">
+    <img src="img/nintendo juegos.webp" alt="NSW2 2025">
     <p>A 2025 aún le quedan unos meses antes de que finalice el año y Nintendo tiene planeados los siguientes lanzamientos para estos últimos meses. Acá te contamos cuáles son:</p>
     <ul>
       <h3>Octubre:</h3>
