--- a/LEVEL-UP/detalle_producto.html
+++ b/LEVEL-UP/detalle_producto.html
@@ -17,9 +17,27 @@
     </style>
 </head>
 <body>
-    <div id = "contenedor-nav-up">
-        
-    </div>
+    <header class="navbar">
+        <div class="logo">
+            <img src="IMG/Adobe Express - file.png" alt="Logo de la Empresa">
+        </div>
+        <nav class="nav-links">
+            <a href="administrador.html">inicio</a>
+            <span>|</span>
+            <a href="crearUsuario.html">crear usuario</a>
+            <span>|</span>
+            <a href="modificarUsuario.html">modificar usuario</a>
+            <span>|</span>
+            <a href="mostrarUsuario.html">mostrar usuarios</a>
+            <span>|</span>
+            <a href="nuevo_producto.html">crear producto</a>
+            <span>|</span>
+            <a href="actualizar_producto.html">modificar producor</a>
+            <span>|</span>
+            <a href="productos_administrador.html">moctrar producto</a>
+        </nav>
+        <a href="javascript:history.back()" class="volver">Volver</a>
+    </header>
 
     <script  src = "JS/encabezado.js"></script>
 
