--- a/LEVEL-UP/pagina.html
+++ b/LEVEL-UP/pagina.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Level-Up Gamer | Home</title>
-  <link rel="stylesheet" href="../css/estilo_lvlup.css">
+  <link rel="stylesheet" href="css/estilo_lvlup.css">
   <script defer src="../js/pagprincipal.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Orbitron:wght@600&display=swap" rel="stylesheet">
 </head>
@@ -20,10 +20,10 @@
     <nav>
       <ul>
         <li><a href="pagina.html">Inicio</a></li>
-        <li><a href="#">Productos</a></li>
-        <li><a href="#">Nosotros</a></li>
+        <li><a href="productos.html">Productos</a></li>
+        <li><a href="nosotros.html">Nosotros</a></li>
         <li><a href="blog.html">Blogs</a></li>
-        <li><a href="#">Contacto</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
       </ul>
     </nav>
     <div class="cart">🛒 Carrito (<span id="cart-count">0</span>)</div>
@@ -36,7 +36,7 @@
       <button class="btn-hero">Ver productos</button>
     </div>
     <div class="hero-img">
-      <img width="200" src="../img/LVL-UP Gamer.webp" alt="Imagen Tienda Gamer">
+      <img width="200" src="img/LVL-UP Gamer.webp" alt="Imagen Tienda Gamer">
     </div>
   </section>
 
