--- a/LEVEL-UP/actualizar_producto.html
+++ b/LEVEL-UP/actualizar_producto.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/productos.css">
     <script src = "JS/productos.js"></script>
+    <link rel="stylesheet" href="CSS/login.css">
     <style>
         body{
             display:flexbox;
@@ -16,9 +17,27 @@
     </style>
 </head>
 <body>
-    <div id = "contenedor-nav-up">
-        
-    </div>
+    <header class="navbar">
+        <div class="logo">
+            <img src="IMG/Adobe Express - file.png" alt="Logo de la Empresa">
+        </div>
+        <nav class="nav-links">
+            <a href="administrador.html">inicio</a>
+            <span>|</span>
+            <a href="crearUsuario.html">crear usuario</a>
+            <span>|</span>
+            <a href="modificarUsuario.html">modificar usuario</a>
+            <span>|</span>
+            <a href="mostrarUsuario.html">mostrar usuarios</a>
+            <span>|</span>
+            <a href="nuevo_producto.html">crear producto</a>
+            <span>|</span>
+            <a href="actualizar_producto.html">modificar producor</a>
+            <span>|</span>
+            <a href="productos_administrador.html">moctrar producto</a>
+        </nav>
+        <a href="javascript:history.back()" class="volver">Volver</a>
+    </header>
 
     <script  src = "JS/encabezado.js"></script>
 
