--- a/LEVEL-UP/administrador.html
+++ b/LEVEL-UP/administrador.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="CSS/login.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
@@ -24,12 +22,11 @@
             <span>|</span>
             <a href="mostrarUsuario.html">mostrar usuarios</a>
             <span>|</span>
-            <a href="crearProducto.html">crear producto</a>
+            <a href="nuevo_producto.html">crear producto</a>
             <span>|</span>
-            <a href="modificarProducto.html">modificar producor</a>
+            <a href="actualizar_producto.html">modificar producor</a>
             <span>|</span>
-            <a href="mostrarProducto.html">moctrar producto</a>
-            
+            <a href="productos_administrador.html">moctrar producto</a>
         </nav>
         <a href="javascript:history.back()" class="volver">Volver</a>
     </header>
