--- a/LEVEL-UP/blog1.html
+++ b/LEVEL-UP/blog1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog | Accesorios Gamer</title>
-  <link rel="stylesheet" href="../css/estilo_lvlup.css">
+  <link rel="stylesheet" href="css/estilo_lvlup.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Orbitron:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -20,7 +20,7 @@
 
   <main class="blog-detail">
     <h1>Top 5 accesorios para mejorar tu setup gamer</h1>
-    <img src="../img/accesorios-gamer_1.webp" alt="Accesorios Gamer">
+    <img src="img/accesorios-gamer_1.webp" alt="Accesorios Gamer">
     <p>En este artículo exploramos los accesorios más recomendados para cualquier jugador: desde auriculares con sonido envolvente, hasta sillas gamers ergonómicas. Estos productos no solo mejoran la comodidad, sino también el rendimiento en cada partida.</p>
     <ul>
         <li>Auriculares HyperX Cloud II</li>
