--- a/LEVEL-UP/nuevo_producto.html
+++ b/LEVEL-UP/nuevo_producto.html
@@ -6,9 +6,26 @@
   <title>Actualizar Producto</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="CSS/productos.css">
+  <link rel="stylesheet" href="CSS/login.css">
 </head>
 <body class="p-4">
-
+  <header class="navbar">
+        <div class="logo" href="pagina.html">
+            <img src="IMG/Adobe Express - file.png" alt="Logo de la Empresa">
+        </div>
+        <nav class="nav-links">
+            <a href="pagina.html">Home</a>
+            <span>|</span>
+            <a href="productos.html">Productos</a>
+            <span>|</span>
+            <a href="nosotros.html">Nosotros</a>
+            <span>|</span>
+            <a href="blog.html">Blogs</a>
+            <span>|</span>
+            <a href="contacto.html">Contacto</a>
+        </nav>
+        <a href="javascript:history.back()" class="volver">Volver</a>
+    </header>
     
   <h1 class="mb-4">Nuevo Producto</h1>
 
