--- a/LEVEL-UP/actualizar_producto.html
+++ b/LEVEL-UP/actualizar_producto.html
@@ -42,7 +42,7 @@
     <script  src = "JS/encabezado.js"></script>
 
     <h1>Actualizar Producto</h1>
-    <div class = "cont_form_prod">
+    <div class = "cont_form_prod contenedor">
         <span><h2 class = "detalle_1linea">Codigo:</h2> <p class = "detalle_1linea">codigo</p> </span>
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Nombre</label>
