--- a/LEVEL-UP/nuevo_producto.html
+++ b/LEVEL-UP/nuevo_producto.html
@@ -32,7 +32,7 @@
   
   <div id="errores" class="alert alert-danger d-none" role="alert"></div>
 
-  <div class="cont_form_prod">
+  <div class="cont_form_prod contenedor" style = "width: 70%">
 
     
     <div class="mb-3">
