--- a/LEVEL-UP/productos.html
+++ b/LEVEL-UP/productos.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="CSS/login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
-<body>
-<div id = "contenedor-nav-up" >
+<body style="background-color: black;">
     <header class="navbar">
         <div class="logo" href="pagina.html">
             <img src="IMG/Adobe Express - file.png" alt="Logo de la Empresa">
@@ -32,9 +31,7 @@
             <td>
                 <div>
                     <input type="text" placeholder= "nombre producto"> 
-                    <button> Buscar</button>  <br>
-                    <h1>Productos</h1>
-                </div>
+                    
         </tr>
         <tr>
             <td>
