--- a/LEVEL-UP/carrito.html
+++ b/LEVEL-UP/carrito.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="CSS/login.css">
     <style>
         .contenedor_info{
             grid-template-columns: 83% 15%;
@@ -21,21 +21,21 @@
 
     <link rel="stylesheet" href="CSS/productos.css"> 
 </head>
-<body>
+<body >
     <div id = "contenedor-nav-up">
         
     </div>
 
     <script  src = "JS/encabezado.js"></script>
 
-    <h2>Mi carrito de compras</h2>
+    <h1>Mi carrito de compras</h1>
 
     <div id = "market-car" class = "contenedor_info">
         <div id = "market_items">
 
         </div>
 
-        <div style="border-left: solid 1px black; padding: 8%;">
+        <div style="border-left: solid 1px white; padding: 8%;">
             <hr>
             <p class = "detalle_1linea" style = "width: 90%;"><h4 class = "detalle_1linea">Total: </h4> <span class = "detalle_1linea" id = "total-carro">0</span></p>
             <br> <br> <br> 
