--- a/LEVEL-UP/productos_administrador.html
+++ b/LEVEL-UP/productos_administrador.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
-<body>
+<body style = "background-color: black;">
     <header class="navbar">
         <div class="logo">
             <img src="IMG/Adobe Express - file.png" alt="Logo de la Empresa">
@@ -35,8 +35,8 @@
         <tr>
             <td>
                 <div>
-                    <input type="text" placeholder= "nombre producto">
-                    <button> Buscar</button>  <br>
+                    
+                    <br>
                     <h1>Productos</h1>
                 </div>
         </tr>
