--- a/LEVEL-UP/carrito.html
+++ b/LEVEL-UP/carrito.html
@@ -22,11 +22,23 @@
     <link rel="stylesheet" href="CSS/productos.css"> 
 </head>
 <body >
-    <div id = "contenedor-nav-up">
-        
-    </div>
-
-    <script  src = "JS/encabezado.js"></script>
+    <header class="navbar">
+        <div class="logo" href="pagina.html">
+            <img src="IMG/Adobe Express - file.png" alt="Logo de la Empresa">
+        </div>
+        <nav class="nav-links">
+            <a href="pagina.html">Home</a>
+            <span>|</span>
+            <a href="productos.html">Productos</a>
+            <span>|</span>
+            <a href="nosotros.html">Nosotros</a>
+            <span>|</span>
+            <a href="blog.html">Blogs</a>
+            <span>|</span>
+            <a href="contacto.html">Contacto</a>
+        </nav>
+        <a href="javascript:history.back()" class="volver">Volver</a>
+    </header>
 
     <h1>Mi carrito de compras</h1>
 
