--- a/LEVEL-UP/detalle_producto.html
+++ b/LEVEL-UP/detalle_producto.html
@@ -18,24 +18,20 @@
     </style>
 </head>
 <body>
-    <header class="navbar">
-        <div class="logo">
+<header class="navbar">
+        <div class="logo" href="pagina.html">
             <img src="IMG/Adobe Express - file.png" alt="Logo de la Empresa">
         </div>
         <nav class="nav-links">
-            <a href="administrador.html">inicio</a>
+            <a href="pagina.html">Home</a>
             <span>|</span>
-            <a href="crearUsuario.html">crear usuario</a>
+            <a href="productos.html">Productos</a>
             <span>|</span>
-            <a href="modificarUsuario.html">modificar usuario</a>
+            <a href="nosotros.html">Nosotros</a>
             <span>|</span>
-            <a href="mostrarUsuario.html">mostrar usuarios</a>
+            <a href="blog.html">Blogs</a>
             <span>|</span>
-            <a href="nuevo_producto.html">crear producto</a>
-            <span>|</span>
-            <a href="actualizar_producto.html">modificar producor</a>
-            <span>|</span>
-            <a href="productos_administrador.html">mostrar producto</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
         <a href="javascript:history.back()" class="volver">Volver</a>
     </header>
