--- a/LEVEL-UP/actualizar_producto.html
+++ b/LEVEL-UP/actualizar_producto.html
@@ -14,6 +14,12 @@
             justify-items: center;
             
         }
+
+        img {
+            width: 100%;
+            border-radius: 8px;
+            margin: 1rem 0;
+        }
     </style>
 </head>
 <body>
@@ -92,7 +98,7 @@
 
         
         <div>
-            <img id = "imagen-principal" src="" alt="" >
+            <img id = "imagen-principal" class="contenedor" src="" alt="" >
         </div>
 
         <button class="btn btn-primary" onclick="validarFormulario()">Actualizar Producto</button>
