--- a/LEVEL-UP/administrador.html
+++ b/LEVEL-UP/administrador.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="contenedor-producto">
                     <button type="button" onclick="btn_crearProducto()">crear producto</button>
-                    <button type="button" onclick="btn_modificarProducto()">modificar producto</button>
+                    <button type="button" onclick="">modificar producto</button>
                     <button type="button" onclick="btn_mostrarProducto()">mostrar producto</button>
                 </div>
             </div>
