--- a/LEVEL-UP/blog.html
+++ b/LEVEL-UP/blog.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Level-Up Gamer | Blogs</title>
   <link rel="stylesheet" href="css/estilo_lvlup.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Orbitron:wght@600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Orbitron:wght@600&display=swap" >
 </head>
 <body>
   
